[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/PixelRPG.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Buttons/ButtonPressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Buttons/ButtonNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://Buttons/ButtonHover.tres" type="StyleBox" id=4]
[ext_resource path="res://Menus/Settings.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 240.0
margin_bottom = 160.0
color = Color( 0, 1, 0.764706, 1 )

[node name="Controls" type="Button" parent="."]
margin_left = 80.0
margin_top = 128.0
margin_right = 160.0
margin_bottom = 152.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
margin_left = 56.0
margin_top = 80.0
margin_right = 184.0
margin_bottom = 96.0
min_value = -30.0
max_value = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 48.0
margin_right = 240.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
margin_left = 216.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 24.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "X"
[connection signal="pressed" from="Controls" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
